fix heading sizes on mobile (#1291)
* fix heading sizes on mobile

* fix typo

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,16 +15,16 @@
 
 @layer base {
   h1 {
-    @apply text-8xl font-semibold;
+    @apply text-6xl md:text-8xl font-semibold;
   }
   h2 {
-    @apply text-6xl font-semibold;
+    @apply text-4xl md:text-6xl font-semibold;
   }
   h3 {
-    @apply text-4xl font-semibold;
+    @apply text-2xl md:text-4xl font-semibold;
   }
   h4 {
-    @apply text-2xl font-semibold;
+    @apply text-lg md:text-2xl font-semibold;
   }
 }
 
